--- a/src/index.scss
+++ b/src/index.scss
@@ -1,19 +1,25 @@
-body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-        "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-        sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
 html,
 body {
     width: 256px;
-    height: 256px;
+    height: 140px;
 }
 
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-        monospace;
+@import "~bootswatch/dist/flatly/variables";
+
+// Disable bootstraps rounded corners
+$enable-rounded: false;
+$enable-gradients: false;
+
+@import "~bootstrap/scss/bootstrap";
+@import "~bootswatch/dist/flatly/bootswatch";
+
+select {
+    -webkit-appearance: none !important;
+}
+
+h5 {
+	margin: 0px;
+    padding-left: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
